# routes/vendorsRoutes.js
@@ -43,35 +43,94 @@ routes.get("/:id", vendorsController.getVendorById);
 ///swagger-autogen
 /**
  * @swagger
- *  /vendors:
- *    post:
- *      summary: Create a new vendor
- *      responses:
- *        201:
- *          description: The created vendor
- *        400:
- *          description: Invalid request
+ * /vendors:
+ *   post:
+ *     summary: Create a new vendor
+ *     tags: [Vendors]
+ *     consumes:
+ *       - application/json
+ *     parameters:
+ *       - in: body
+ *         name: vendor
+ *         description: Vendor to create
+ *         required: true
+ *         schema:
+ *           type: object
+ *           required:
+ *             - name
+ *             - address
+ *             - contact
+ *           properties:
+ *             name:
+ *               type: string
+ *             address:
+ *               type: string
+ *             contact:
+ *               type: object
+ *               required:
+ *                 - email
+ *                 - phone
+ *               properties:
+ *                 email:
+ *                   type: string
+ *                 phone:
+ *                   type: string
+ *     responses:
+ *       201:
+ *         description: Vendor created successfully
+ *       400:
+ *         description: Validation failed
+ *       500:
+ *         description: Error creating vendor
  */
 
 // Create a new vendor
 routes.post("/", vendorsController.createVendor);
 
-/**
- * @swagger
+/* @swagger
  * /vendors/{id}:
- *  put:
- *   summary: Update a vendor by ID
- *   responses:
- *     200:
- *       description: The updated vendor
- *     400:
- *       description: Invalid request
- *     404:
- *       description: Vendor not found
+ *   put:
+ *     summary: Update a vendor by ID
+ *     tags: [Vendors]
+ *     consumes:
+ *       - application/json
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         type: string
+ *       - in: body
+ *         name: vendor
+ *         description: Vendor data to update
+ *         required: true
+ *         schema:
+ *           type: object
+ *           properties:
+ *             name:
+ *               type: string
+ *             address:
+ *               type: string
+ *             contact:
+ *               type: object
+ *               properties:
+ *                 email:
+ *                   type: string
+ *                 phone:
+ *                   type: string
+ *     responses:
+ *       200:
+ *         description: Vendor updated successfully
+ *       400:
+ *         description: Validation failed
+ *       404:
+ *         description: Vendor not found
+ *       500:
+ *         description: Error updating vendor
  */
 
 // Update a vendor by ID
 routes.put("/:id", vendorsController.updateVendor);
+
 /**
  * @swagger
  * /vendors/{id}:
